--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "build:watch": "tsc -w",
-    "start": "node dist/index.js"
+    "start": "node dist/index.js",
+    "build:docs": "npx typedoc --json resources/websocket-messages.json src/modules/pubsub/interfaces/messages.ts && node dist/modules/http/generateStaticDocs.js"
   },
   "keywords": [],
   "author": "",
@@ -14,10 +15,12 @@
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.13",
+    "@types/express-mysql-session": "^2.1.3",
     "@types/express-session": "^1.17.4",
     "@types/node": "^16.11.7",
     "@types/websocket": "^1.0.4",
-    "@types/express-mysql-session": "^2.1.3",
+    "highlight.js": "^11.5.0",
+    "typedoc": "^0.22.13",
     "typescript": "^4.4.4"
   },
   "dependencies": {
